# timetable

./: .env.example  .env.prod.example  .gitignore  Makefile  README.md  claude.md  docker-compose.backend.yml  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/apps/academics/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/academics/migrations/: 0001_initial.py  0002_allow_null_teacher_assignment.py  0003_add_teacher_status_replacement.py
backend/apps/accounts/: admin.py  apps.py  exceptions.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
backend/apps/accounts/management/commands/: create_superadmin.py  seed_data.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/audit/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/apps/audit/migrations/: 0001_initial.py
backend/apps/exports/: __init__.py  apps.py  generators.py  urls.py  views.py
backend/apps/org/: __init__.py  admin.py  apps.py  middleware.py  models.py  serializers.py  urls.py  views.py
backend/apps/org/migrations/: 0001_initial.py
backend/apps/timetable/: admin.py  apps.py  engine.py  models.py  serializers.py  urls.py  views.py
backend/apps/timetable/migrations/: 0001_initial.py  0002_add_entry_conflict_indexes.py
backend/config/: celery.py  urls.py
backend/config/settings/: base.py
backend/templates/exports/: base.html  grade_timetable.html  school_timetable.html  section_timetable.html  teacher_timetable.html
(+52 files in other folders)
